--- a/src/Components/Burger/Burger.module.css
+++ b/src/Components/Burger/Burger.module.css
@@ -7,3 +7,10 @@
     font-weight: bold;
     font-size: 1.2rem;
 }
+
+@media(min-width: 1000px) and (min-height: 700px)  {
+    .Burger {
+        width: 450px;
+        height: 400px;
+    }
+}
